--- a/app/src/main/res/layout/fragment_upcoming_events.xml
+++ b/app/src/main/res/layout/fragment_upcoming_events.xml
@@ -17,11 +17,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Upcoming Events"
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:layout_gravity="center"
-            android:paddingBottom="8dp" />
+            android:paddingBottom="8dp"
+            android:text="Events History"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/searchBar"
