--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -10,7 +10,7 @@
         android:id="@+id/welcomeMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Plan Your Events Stree Free!"
+        android:text="Plan Your Events Stress-Free!"
         android:textSize="18sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
